[tool.poetry]
name = "glob_util"
version = "0.1.0"
description = ""
authors = ["hanvic <hanvic@likelion.net>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-watch = "^4.2.0"
loguru = "^0.5.3"
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
